# lasa-mplidar

./: .gitignore  Extracao.ipynb  LICENSE  README.md  extracao.ipynb  extract.py  mplscripts.py  pyproject.toml  requirements.txt
