[project]
name = "mpl-scripts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "netcdf4>=1.7.2",
    "numpy>=2.2.2",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "rich>=13.9.4",
    "xarray>=2025.1.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
]
